# adp-machine-learning

./: .gitignore  BEISPIEL_trAdaBoostR2_Aufruf_EInzelneModelle.py  README.md  domAdap_TradaBoostR2.ipynb  dom_adapt_II.ipynb  log.txt  main.ipynb  main.py  plot.py  pyproject.toml  soft_start.py  test.py  training.py  tuning_single_models.py  validate.py  validation_results_as_list.py  words.json
assets/: best-model.h5  learning-rates.json  vergleich.txt
assets/models/: cnn-davi-new.h5
assets/results-base-model/: results-base-model-n-15.json
assets/results-soft-start/: results-soft-start-n-15.json
lib/: Fensterung_Scaling_DeepLearning.py  Get_Labels.py  Load_Data_for_Modelling.py  PreProcessing_SingleBlech_Function.py  Splitting_Scaling_Function.py
lib/04_KonventionelleModelle/: Modellierung_Konventionelle_Modelle.ipynb
lib/05_DeepLearningModelle/: CNN_KNR.ipynb  Modellierung_CNN.ipynb  Modellierung_RNN.ipynb  TransformerNetworks.ipynb
lib/07_Plots/: Plots_AlleBleche.ipynb  Read_Plot_LangesBlech.ipynb
lib/Vorarbeiten_Modellierung/: Fensterung_Scaling_DeepLearning.py  Get_Labels.py  PreProcessing_SingleBlech_Function.py  Read_Data_SingleBlech.py  Read_DataframeAll.py  Splitting_Scaling_Function.py
lib/feature_extraction/: Splitting_Scaling_Function_Features.py
lib/funcions_konventionelle_Modelle/: Hyperparametertuning_Konventionell.py
lib/functions_CNN_Modelle/: Data_Augmentation_CNN.py  Modellierung_CNN.py  main_example.py  model.py
src/: callback.py  datacontainer.py  model.py  serialize.py  show.py  splitting.py  tuning.py
src/data/: __init__.py  (+5 more)
(+495 files in other folders)
